# flux-gw

./: .gitignore  Cargo.toml  README.md
.github/workflows/: Dockerfile  cd.yaml
settings/: default.toml
src/: app.rs
src/app/: auth.rs  error.rs  locale.rs  messages.rs  notify.rs  push.rs  pushes.rs  settings.rs  state.rs  streams.rs  user.rs
src/app/auth/: settings.rs
src/app/notify/: messaging.rs  service.rs  settings.rs  state.rs
