[package]
name = "flux-gw"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
flux-users-api = { git = "https://github.com/thefluxapp/flux-users.git" }
flux-messages-api = { git = "https://github.com/thefluxapp/flux-messages.git" }
flux-notify-api = { git = "https://github.com/thefluxapp/flux-notify.git" }
flux-lib = { git = "https://github.com/thefluxapp/flux-lib.git" }

thiserror = "2.0.12"
config = { version = "0.15", default-features = false, features = ["toml"] }
uuid = { version = "1.16.0", features = ["serde", "v7"] }
jsonwebtoken = "9.3.1"
log = "0.4.26"

axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }

async-nats = "0.39.0"

tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }

prost = "0.13.5"
tonic = { version = "0.12.3", default-features = false, features = ["channel"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["base64"] }
